@@ -18,5 +18,5 @@
  * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-void desktop_init (AppearanceData *data);
+void desktop_init (AppearanceData *data, const gchar **uris);
 void desktop_shutdown (AppearanceData *data);
